fixed pr comments